--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body{
+    height: 100vh;
+    background-color: black !important;
+}
+
 
 
 
